src-tauri/tests/snapshots/cross_validation__xv_err_raw_json_content.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: system
  id: e1
  content_length: 1
  content:
    - type: text
      text: "Error: inner error"
  status: ~
  streaming: ~
