src-tauri/tests/snapshots/cross_validation__xv_err_role_plain_text.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: system
  id: e1
  content_length: 1
  content:
    - type: text
      text: "Error: crash!"
  status: ~
  streaming: ~
