src-tauri/tests/snapshots/cross_validation__xv_merge_broken_by_real_user.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: text
      text: hello
  status:
    type: complete
    reason: stop
  streaming: ~
- role: user
  id: u1
  content_length: 1
  content:
    - type: text
      text: more please
  status: ~
  streaming: ~
- role: assistant
  id: a2
  content_length: 1
  content:
    - type: text
      text: world
  status:
    type: complete
    reason: stop
  streaming: ~
