src-tauri/tests/snapshots/cross_validation__xv_merge_streaming_flag_from_latest.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: assistant
  id: a1
  content_length: 2
  content:
    - type: text
      text: done
    - type: text
      text: streaming...
  status:
    type: complete
    reason: stop
  streaming: true
