src-tauri/tests/snapshots/cross_validation__xv_res_duration_exact_60s.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: system
  id: r1
  content_length: 1
  content:
    - type: text
      text: 1m
  status: ~
  streaming: ~
