src-tauri/tests/snapshots/cross_validation__xv_res_duration_short.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: system
  id: r1
  content_length: 1
  content:
    - type: text
      text: 3.5s
  status: ~
  streaming: ~
