src-tauri/tests/snapshots/cross_validation__xv_res_full.snap
---
source: tests/cross_validation.rs
expression: run(msgs)
---
- role: system
  id: r1
  content_length: 1
  content:
    - type: text
      text: "4.5s • in 1,234 • out 567 • $0.0123"
  status: ~
  streaming: ~
